[tool.poetry]
name = "rs"
version = "0.1.0"
description = ""
authors = ["Simon Junod <sj@simonjunod.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
markovify = "^0.9.4"
bs4 = "^0.0.1"
pygrammalecte = "^1.3.0"
language-tool-python = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
